[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/task_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/task_component1.png" type="Texture" id=3]
[ext_resource path="res://assets/task_component2_red.png" type="Texture" id=4]
[ext_resource path="res://scripts/ArrowBody.gd" type="Script" id=5]
[ext_resource path="res://scripts/BombTask1.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=2]
height = 2.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 58.5 )

[node name="BombTask1" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="ArrowBody" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Arrow" type="Sprite" parent="ArrowBody"]
position = Vector2( 294, 131 )
scale = Vector2( 0.0911455, 0.0911455 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowBody"]
position = Vector2( 294, 131 )
shape = SubResource( 2 )

[node name="LevelPart1" type="Node2D" parent="."]

[node name="Line" type="Sprite" parent="LevelPart1"]
position = Vector2( 315, 300 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Target" type="Area2D" parent="LevelPart1"]

[node name="Sprite" type="Sprite" parent="LevelPart1/Target"]
position = Vector2( 315, 292.386 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelPart1/Target"]
position = Vector2( 315, 292.5 )
shape = SubResource( 1 )

[node name="LevelPart2" type="Node2D" parent="."]
position = Vector2( 100, 0 )

[node name="Line" type="Sprite" parent="LevelPart2"]
position = Vector2( 315, 300 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Target" type="Area2D" parent="LevelPart2"]

[node name="Sprite" type="Sprite" parent="LevelPart2/Target"]
position = Vector2( 315, 342.559 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelPart2/Target"]
position = Vector2( 315, 342.673 )
shape = SubResource( 1 )

[node name="LevelPart3" type="Node2D" parent="."]
position = Vector2( 200, 0 )

[node name="Line" type="Sprite" parent="LevelPart3"]
position = Vector2( 315, 300 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Target" type="Area2D" parent="LevelPart3"]

[node name="Sprite" type="Sprite" parent="LevelPart3/Target"]
position = Vector2( 315, 240.642 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelPart3/Target"]
position = Vector2( 315, 240.756 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 562.0
margin_top = 125.0
margin_right = 749.0
margin_bottom = 176.0
text = "Tries: 1"

[connection signal="player_succeeded_in_part" from="ArrowBody" to="." method="_on_ArrowBody_player_succeeded_in_part"]
[connection signal="player_tries_again" from="ArrowBody" to="." method="_on_ArrowBody_player_tries_again"]
[connection signal="body_entered" from="LevelPart1/Target" to="ArrowBody" method="_on_Target_body_entered"]
[connection signal="body_exited" from="LevelPart1/Target" to="ArrowBody" method="_on_Target_body_exited"]
[connection signal="body_entered" from="LevelPart2/Target" to="ArrowBody" method="_on_Target_body_entered"]
[connection signal="body_exited" from="LevelPart2/Target" to="ArrowBody" method="_on_Target_body_exited"]
[connection signal="body_entered" from="LevelPart3/Target" to="ArrowBody" method="_on_Target_body_entered"]
[connection signal="body_exited" from="LevelPart3/Target" to="ArrowBody" method="_on_Target_body_exited"]
